<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gdb_test_pkg</name>
  <version>1.0.0</version>
  <description>
     This package tests minimal GDB
  </description>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>Apache-2.0</license>
  <author>Steve Macenski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
